<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Cornerlays</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_fine_tune">Position anpassen (Feintuning)</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Abbrechen</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="configure_overlays">Overlays konfigurieren</string>
    <string name="display_mode_countdown">Restlaufzeit (mm:ss)</string>
    <string name="display_mode_countdown_hms">Restlaufzeit (hh:mm:ss)</string>
    <string name="display_mode_datetime">Datum &amp; Uhrzeit (dd.MM. HH:mm)</string>
    <string name="display_mode_normal">Normal (unformatiert)</string>
    <string name="display_mode_time_only">Nur Uhrzeit (HH:mm)</string>
    <string name="display_mode_weekday_time">Wochentag &amp; Uhrzeit (Mo, HH:mm)</string>
    <string name="entity_picker_search_hint">Suchen...</string>
    <string name="entity_picker_title">Entität auswählen</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="ha_auth_failed">Authentifizierung fehlgeschlagen</string>
    <string name="ha_connection_status">Verbindungsstatus</string>
    <string name="ha_display_mode">Anzeige-Modus</string>
    <string name="ha_display_mode_label">Anzeigemodus</string>
    <string name="ha_display_name_hint">VOR dem Zustand (Optional, z.B. Name, Einheit, Text)</string>
    <string name="ha_display_name_label">Anzeigename (Präfix)</string>
    <string name="ha_entity_browse_button">Entität auswählen</string>
    <string name="ha_entity_id_hint">Entitäts-ID (z.B. sensor.temp)</string>
    <string name="ha_entity_id_label">Entität / Attribut</string>
    <string name="ha_fetch_entities_error">Fehler beim Abrufen der Entitäten.</string>
    <string name="ha_hide_if_unavailable">Ausblenden, wenn nicht verfügbar</string>
    <string name="ha_hide_unavailable">Ausblenden bei Fehler</string>
    <string name="ha_invalid_url">Ungültige URL</string>
    <string name="ha_overlay_not_configured">Nicht konfiguriert</string>
    <string name="ha_overlay_settings_title">%s Konfiguration</string>
    <string name="ha_overlay_slot">HA-Overlay %d</string>
    <string name="ha_overlays_title">Home Assistant Overlays</string>
    <string name="ha_save_button">Speichern</string>
    <string name="ha_settings_title">Home Assistant Verbindung</string>
    <string name="ha_state_default">Hauptstatus</string>
    <string name="ha_status_connected">Verbunden</string>
    <string name="ha_status_connecting">Verbinde...</string>
    <string name="ha_status_disconnected">Getrennt</string>
    <string name="ha_status_error">Fehler</string>
    <string name="ha_token_hint">Langlebiges Zugriffstoken</string>
    <string name="ha_unavailable">n.v.</string>
    <string name="ha_unit_hint">NACH dem Zustand (Optional, z.B. Name, Einheit, Text)</string>
    <string name="ha_unit_label">Einheit (Suffix)</string>
    <string name="ha_url_hint">Home Assistant URL (z.B. http://192.168.1.100:8123)</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="accessibility_service_description">Ermöglicht das automatische Dimmen und die MQTT-Statusübertragung.</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="lb_control_display_fast_forward_multiplier">%1$dX</string>
    <string name="lb_control_display_rewind_multiplier">%1$dX</string>
    <string name="lb_guidedaction_continue_title">Continue</string>
    <string name="lb_guidedaction_finish_title">Finish</string>
    <string name="lb_media_player_error">MediaPlayer error code %1$d extra %2$d</string>
    <string name="lb_navigation_menu_contentDescription">Navigation menu</string>
    <string name="lb_onboarding_accessibility_next">Next</string>
    <string name="lb_onboarding_get_started">GET STARTED</string>
    <string name="lb_playback_controls_closed_captioning_disable">Disable Closed Captioning</string>
    <string name="lb_playback_controls_closed_captioning_enable">Enable Closed Captioning</string>
    <string name="lb_playback_controls_fast_forward">Fast Forward</string>
    <string name="lb_playback_controls_fast_forward_multiplier">Fast Forward %1$dX</string>
    <string name="lb_playback_controls_hidden">Media controls hidden, press d-pad to show</string>
    <string name="lb_playback_controls_high_quality_disable">Disable High Quality</string>
    <string name="lb_playback_controls_high_quality_enable">Enable High Quality</string>
    <string name="lb_playback_controls_more_actions">More Actions</string>
    <string name="lb_playback_controls_pause">Pause</string>
    <string name="lb_playback_controls_picture_in_picture">Enter Picture In Picture Mode</string>
    <string name="lb_playback_controls_play">Play</string>
    <string name="lb_playback_controls_repeat_all">Repeat All</string>
    <string name="lb_playback_controls_repeat_none">Repeat None</string>
    <string name="lb_playback_controls_repeat_one">Repeat One</string>
    <string name="lb_playback_controls_rewind">Rewind</string>
    <string name="lb_playback_controls_rewind_multiplier">Rewind %1$dX</string>
    <string name="lb_playback_controls_shown">Media controls shown</string>
    <string name="lb_playback_controls_shuffle_disable">Disable Shuffle</string>
    <string name="lb_playback_controls_shuffle_enable">Enable Shuffle</string>
    <string name="lb_playback_controls_skip_next">Skip Next</string>
    <string name="lb_playback_controls_skip_previous">Skip Previous</string>
    <string name="lb_playback_controls_thumb_down">Deselect Thumb Down</string>
    <string name="lb_playback_controls_thumb_down_outline">Select Thumb Down</string>
    <string name="lb_playback_controls_thumb_up">Deselect Thumb Up</string>
    <string name="lb_playback_controls_thumb_up_outline">Select Thumb Up</string>
    <string name="lb_playback_time_separator">/</string>
    <string name="lb_search_bar_hint">Search</string>
    <string name="lb_search_bar_hint_speech">Speak to search</string>
    <string name="lb_search_bar_hint_with_title">Search %1$s</string>
    <string name="lb_search_bar_hint_with_title_speech">Speak to search %1$s</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="setting_color">Schriftfarbe</string>
    <string name="setting_group_appearance">Aussehen</string>
    <string name="setting_group_position">Position</string>
    <string name="setting_position_fine_tune">Feintuning</string>
    <string name="setting_position_label">Ausrichtung</string>
    <string name="setting_shadow_color">Umriss-/Schattenfarbe</string>
    <string name="setting_size">Schriftgröße</string>
    <string name="setting_weather_city">Stadt</string>
    <string name="setting_weather_enable">Wetter anzeigen</string>
    <string name="setting_weather_fahrenheit">Fahrenheit statt Celsius</string>
    <string name="tab_clock">Uhr</string>
    <string name="tab_date">Datum</string>
    <string name="tab_ha">HomeAssistant</string>
    <string name="tab_weather">Wetter</string>
</resources>