<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_weather_enabled"
            android:text="@string/setting_weather_enable"
            style="@style/Widget.App.Switch"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/container_weather_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_weather_city"
                style="@style/SettingsItem.TextInput">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_weather_city"
                    android:hint="@string/setting_weather_city"
                    style="@style/SettingsItem.TextInput.EditText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_weather_fahrenheit"
                android:text="@string/setting_weather_fahrenheit"
                style="@style/Widget.App.Switch"/>
            <TextView
                android:text="@string/setting_group_position"
                style="@style/SettingsSectionHeader"/>
            <View style="@style/SettingsDivider"/>
            <LinearLayout
                android:id="@+id/container_weather_position"
                style="@style/SettingsItem.Container.Clickable">
                <TextView
                    android:text="@string/setting_position_label"
                    style="@style/SettingsItem.Label"/>
                <Spinner
                    android:id="@+id/spinner_weather_position"
                    style="@style/SettingsItem.Spinner"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/btn_weather_fine_tune"
                android:layout_marginTop="8dp"
                style="@style/SettingsItem.Container.Clickable">
                <TextView
                    android:textColor="?attr/colorOnSurface"
                    android:text="@string/setting_position_fine_tune"
                    style="@style/SettingsItem.Label"/>
            </RelativeLayout>
            <TextView
                android:text="@string/setting_group_appearance"
                style="@style/SettingsSectionHeader"/>
            <View style="@style/SettingsDivider"/>
            <RelativeLayout
                android:focusable="false"
                style="@style/SettingsItem.Container">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_size"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/textview_size_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
                <SeekBar
                    android:id="@+id/seekbar_size"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:max="34"
                    android:layout_below="@+id/textview_size_value"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/container_color"
                style="@style/SettingsItem.Container.Clickable">
                <TextView
                    android:text="@string/setting_color"
                    style="@style/SettingsItem.Label"/>
                <View
                    android:id="@+id/color_preview"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/container_shadow_color"
                style="@style/SettingsItem.Container.Clickable">
                <TextView
                    android:text="@string/setting_shadow_color"
                    style="@style/SettingsItem.Label"/>
                <View
                    android:id="@+id/shadow_color_preview"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
