<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CombinedSettingsActivity">

    <RadioGroup
        android:id="@+id/tab_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/tab_clock"
            style="@style/SettingsItem.Tab"
            android:checked="true"
            android:nextFocusRight="@id/tab_date"
            android:nextFocusDown="@id/switch_clock_enabled"
            android:text="@string/tab_clock" />

        <RadioButton
            android:id="@+id/tab_date"
            style="@style/SettingsItem.Tab"
            android:nextFocusLeft="@id/tab_clock"
            android:nextFocusRight="@id/tab_weather"
            android:nextFocusDown="@id/switch_date_enabled"
            android:text="@string/tab_date" />

        <RadioButton
            android:id="@+id/tab_weather"
            style="@style/SettingsItem.Tab"
            android:nextFocusLeft="@id/tab_date"
            android:nextFocusRight="@id/tab_ha"
            android:nextFocusDown="@id/switch_weather_enabled"
            android:text="@string/tab_weather" />

        <RadioButton
            android:id="@+id/tab_ha"
            style="@style/SettingsItem.Tab"
            android:nextFocusLeft="@id/tab_weather"
            android:nextFocusDown="@id/btn_ha_overlay_1"
            android:text="@string/tab_ha" />
    </RadioGroup>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/settings_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>