<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/ha_settings_title"
        style="@style/SettingsSectionHeader"/>
    <View style="@style/SettingsDivider"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_ha_url"
        android:nextFocusUp="@+id/tab_ha"
        android:nextFocusDown="@+id/container_ha_token"
        android:layout_marginTop="0dp"
        style="@style/SettingsItem.TextInput">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_ha_url"
            android:hint="@string/ha_url_hint"
            android:inputType="textUri"
            style="@style/SettingsItem.TextInput.EditText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_ha_token"
        android:nextFocusUp="@+id/container_ha_url"
        android:nextFocusDown="@+id/btn_ha_overlay_1"
        app:passwordToggleEnabled="true"
        style="@style/SettingsItem.TextInput">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_ha_token"
            android:hint="@string/ha_token_hint"
            android:inputType="textPassword"
            style="@style/SettingsItem.TextInput.EditText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:focusable="false"
        android:layout_marginTop="16dp"
        style="@style/SettingsItem.Container">
        <TextView
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ha_connection_status"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/icon_ha_connection_status"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textAppearance="?attr/textAppearanceBody2"
            android:id="@+id/text_ha_connection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:text="@string/ha_overlays_title"
        style="@style/SettingsSectionHeader"/>
    <View style="@style/SettingsDivider"/>
    <Button
        android:id="@+id/btn_ha_overlay_1"
        android:nextFocusUp="@+id/container_ha_token"
        android:nextFocusDown="@+id/btn_ha_overlay_2"
        style="@style/SettingsItem.FineTuneButton"/>
    <Button
        android:id="@+id/btn_ha_overlay_2"
        android:nextFocusUp="@+id/btn_ha_overlay_1"
        android:nextFocusDown="@+id/btn_ha_overlay_3"
        style="@style/SettingsItem.FineTuneButton"/>
    <Button
        android:id="@+id/btn_ha_overlay_3"
        android:nextFocusUp="@+id/btn_ha_overlay_2"
        style="@style/SettingsItem.FineTuneButton"/>
</LinearLayout>
